# DAZPilot

./: .clangd  .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .markdownlint.json  .prettierignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DazPilot.def  ExportOptions.h  GEMINI.md  JsonUtil.h  LICENSE  Log.cpp  MCPBridge.def  MCPServer.cpp  README.md  RELEASE_NOTES.md  SECURITY.md  daz-mcp-client.py  package-lock.json  package.json  plugin.json  pluginmain.cpp  tailwind.config.js  test_mcp.ps1  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: app-release.yml  bridge-build.yml  build.yml  ci.yml  plugin-release.yml  release.yml
.husky/: pre-commit  pre-push
.opencode/plans/: fix_compilation_errors.md
Fix/Content/Documentation/: G9GoldenPalace_Readme.txt  GoldenPalaceG8Fv2_Readme.txt
Fix/Content/Tools/: conflict_report.json
Fix/Documents/: DragiHadzitosic-Realistic Breasts G8F.txt  DragiHadzitosic-Realistic Breasts G9.txt
docs/: ACCEPTANCE.md  AGENTS.md  ARCHITECTURE.md  CURRENT_STATE.md  GETTING_STARTED.md  IMPLEMENTATION.md  PERMISSIONS.md  PLATFORM_MATRIX.md  PUBLISHING.md  README.md  RELEASE_GUIDE.md  ROADMAP.md  THIRD-PARTY.md
docs/plan/: material-opacity-tools.md
docs/releases/: plugin-v0.5.5.md  v0.5.5.md
legacy/vibe-tcp-server/: Cargo.toml
legacy/vibe-tcp-server/src/: main.rs
plan/: FULL_PLAN.md
plugins/daz3d-bridge/: CMakeLists.txt  DazPilotBridge.cpp  DazPilotBridge.def  DazPilotBridge.h  DazPilotBridgePlugin.cpp  DazPilotBridgePlugin.h  DazPilotBridgePlugin.moc  DazPilotExportOptions.cpp  DazPilotExportOptions.h  DazPilotPhyModifier.cpp  DazPilotPhyModifier.h  JsonUtil.h  Log.cpp  Log.h  README.md  bridge_commands.manifest  moc_DazPilotPhyModifier.cpp
plugins/daz3d-bridge/dzbridge/include/: DzBridgeDialog_Scriptable.h
plugins/daz3d-bridge/tests/: test_glm.cpp  test_jsonutil.cpp  test_math.cpp  test_simdjson.cpp
release_assets/: LICENSE
scripts/: acceptance-bridge.ps1  build-plugin.sh  build.ps1  build.sh  clean.sh  dev.sh  find-bridge-dll.ps1  find-dll.ps1  lint.sh  setup.sh  stage-bridge-dll.ps1  stage-release-assets.sh  sync-bridge-manifest.ps1  sync-manifest.ps1  test.sh
src/: App.tsx  DAZStudioMCP.cpp  DAZStudioMCP.h  DAZStudioMCPPlugin.cpp  DAZStudioMCPPlugin.h  ExportOptions.cpp  Log.h  MCPServer.h  index.css  index.html  main.tsx
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  splash.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: README.md
src-tauri/resources/models/: .gitkeep
src-tauri/src/: advanced.rs  ai_action.rs  ai_providers.rs  ai_service.rs  ai_system.rs  ai_tool_planner.rs  animation.rs  app_inbox.rs  asset_fixer.rs  asset_matcher.rs  figure_resolver.rs  lib.rs  library_scanner.rs  local_ai.rs  local_ai_cmd.rs  main.rs  mcp_client.rs  model_download.rs  ollama_service.rs  physics.rs  platform.rs  sdk_indexer.rs  viewport_sync.rs  vision_service.rs  visual_properties.rs
src-tauri/src/agents/: analytics.rs  animation_agent.rs  asset_selection.rs  conflict_resolution.rs  mod.rs  orchestrator.rs  physics_agent.rs  registry.rs  render_agent.rs  scene_composer.rs  task_planner.rs
src-tauri/src/agents/sub_agents/: camera_agent.rs  export_agent.rs  lighting_agent.rs  material_agent.rs  mod.rs  morph_agent.rs  pose_agent.rs  timeline_agent.rs
src-tauri/src/ai_system/: vector_store.rs
src-tauri/src/core/: error.rs  mod.rs  result.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/knowledge/: asset_knowledge.rs  command_knowledge.rs  daz_concepts.rs  failure_knowledge.rs  mod.rs  scene_knowledge.rs  workflow_knowledge.rs
src-tauri/src/reasoning/: executor.rs  explainer.rs  learner.rs  mod.rs  planner.rs  validator.rs
src-tauri/src/sdk_parser/: parser.cpp  parser.h
src-tauri/src/tools/: animation_tools.rs  asset_discovery.rs  camera_tools.rs  character_tools.rs  clothing_tools.rs  environment_tools.rs  export_tools.rs  figure_tools.rs  hair_tools.rs  knowledge_tools.rs  lighting_tools.rs  material_tools.rs  meta_tools.rs  mod.rs  morph_tools.rs  physics_tools.rs  pipeline_tools.rs  pose_tools.rs  props_tools.rs  render_tools.rs  rigging_tools.rs  scene_composition.rs  scene_observation.rs  scene_tools.rs  selection_tools.rs  transform_tools.rs  utility_tools.rs  viewport_tools.rs
src-tauri/tests/: advanced_composition_tests.rs  agent_routing_tests.rs  ai_action_tests.rs  animation_tests.rs  database_tests.rs  library_scanner_tests.rs  physics_tests.rs  planner_tests.rs  scene_composition_tests.rs  scripting_tests.rs  spatial_tests.rs  viewport_sync_tests.rs
src/components/: FirstLaunchWizard.module.css  FirstLaunchWizard.tsx  Launcher.tsx  ScriptApprovalPanel.module.css  ScriptApprovalPanel.tsx
src/components/agents/: index.ts  (+12 more)
src/data/: tutorials.ts
src/hooks/: useHotkey.ts
src/store/: agentAnalyticsStore.ts  appStore.test.ts  appStore.ts  assetFixerStore.test.ts  assetFixerStore.ts  assetsStore.test.ts  assetsStore.ts  chatStore.test.ts  chatStore.ts  connectionStore.test.ts  connectionStore.ts  index.ts  learningStore.ts  localAiStore.test.ts  localAiStore.ts  logStore.test.ts  logStore.ts  ollamaStore.test.ts  ollamaStore.ts  planStore.test.ts  planStore.ts  pluginStore.test.ts  pluginStore.ts  presetStore.test.ts  presetStore.ts  sceneStore.test.ts  sceneStore.ts  scratchpadStore.test.ts  scratchpadStore.ts  scriptApprovalStore.test.ts  scriptApprovalStore.ts  toastStore.test.ts  toastStore.ts  viewportStore.test.ts  viewportStore.ts  webcamStore.test.ts  webcamStore.ts
src/styles/: design-system.css  global.css  tokens.css
src/test/: setup.ts
src/types/: app.ts
src/utils/: cn.test.ts  cn.ts  faceTracking.test.ts  faceTracking.ts  webcam.test.ts  webcam.ts
tests/: test_export_options.cpp  test_json.cpp  test_jsonutil.cpp  test_log.cpp  test_stb.cpp  test_utfcpp.cpp
tests/scripts/: build.bats  clean.bats  dev.bats  setup.bats  test.bats
(+2589 files in other folders)
