[package]
name = "dazpilot"
version = "0.5.4"
description = "DazPilot - AI Co-Pilot for Daz Studio"
authors = ["DazPilot Team"]
edition = "2021"

[lib]
name = "dazpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
log = "0.4"
once_cell = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
dirs = "5"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1"
flate2 = "1"
base64 = "0.22"
rfd = "0.14"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
qdrant-client = { version = "1.18.0", optional = true }
urlencoding = "2"
fastrand = "2.0"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
qdrant-client = ["dep:qdrant-client"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
